# api.rushii.dev

./: .editorconfig  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yml  docker.yml
src/: config.rs  main.rs
src/fairings/: api_error.rs  headers.rs  mod.rs
src/logic/: aliucord_contributors.rs  github_api.rs  mod.rs
src/routes/: aliucord.rs  catchers.rs  mod.rs
