[package]
name = "api"
version = "1.0.0"
edition = "2024"
publish = false

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
log = "0.4"
reqwest = { version = "0.12", features = ["gzip", "json"] }
rocket = { version = "0.5", features = ["json"] }
serde = "1"
tokio = "1"

[target.'cfg(target_env = "musl")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
